[package]
name = "nxmproxy"
version = "0.1.0"
edition = "2018"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
bindings = { path = "bindings" }
once_cell = "*"
structopt = "0.3"
url = "2.2"
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
